name:                clr-host
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://gitlab.com/tim-m89/clr-host
license:             BSD3
license-file:        LICENSE
author:              Tim Matthews
maintainer:          tim.matthews7@gmail.com
copyright:           Copyright: (c) 2016 Tim Matthews
category:            Development
build-type:          Custom
extra-source-files:  src/Driver.cs
extra-tmp-files:     src/Driver.dll
cabal-version:       >=1.10

flag enable_dotnet
  description: build with .Net support
  default: False

flag enable_mono
  description: build with mono support
  default: False

custom-setup
  setup-depends:       base, directory, filepath, Cabal, transformers

library
  hs-source-dirs:      src
  c-sources:           src/dotNetHost.c
  default-language:    Haskell2010
  other-modules:       Clr.Host.Driver
  if flag(enable_dotnet) && flag(enable_mono)
    Cpp-options:         -DHAVE_DOTNET, -DHAVE_MONO
    cc-options:          -DHAVE_DOTNET, -DHAVE_MONO
    exposed-modules:     Clr.Host, Clr.Host.Config, Clr.Host.DotNet, Clr.Host.Mono
  if flag(enable_dotnet) && !flag(enable_mono)
    Cpp-options:         -DHAVE_DOTNET
    cc-options:          -DHAVE_DOTNET
    exposed-modules:     Clr.Host, Clr.Host.Config, Clr.Host.DotNet
  if !flag(enable_dotnet) && flag(enable_mono)
    Cpp-options:         -DHAVE_MONO
    cc-options:          -DHAVE_MONO
    exposed-modules:     Clr.Host, Clr.Host.Config, Clr.Host.Mono
  if !flag(enable_dotnet) && !flag(enable_mono)
    if os(windows)
      Cpp-options:         -DHAVE_DOTNET
      cc-options:          -DHAVE_DOTNET
      exposed-modules:     Clr.Host, Clr.Host.Config, Clr.Host.DotNet
    else
      Cpp-options:         -DHAVE_MONO
      cc-options:          -DHAVE_MONO
      exposed-modules:     Clr.Host, Clr.Host.Config, Clr.Host.Mono
  if os(windows)
    build-depends:       base >= 4.7 && < 5, bytestring, file-embed, Win32
  else
    build-depends:       base >= 4.7 && < 5, bytestring, file-embed

test-suite clr-host-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clr-host
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/tim-m89/clr-host
