name:                clr
version:             0.1.0.0
synopsis:            Haskell <-> CLR bridge
description:         Please see README.md
homepage:            https://gitlab.com/tim-m89/clr
license:             BSD3
license-file:        LICENSE
author:              Tim Matthews
maintainer:          tim.matthews7@gmail.com
copyright:           Copyright: (c) 2016 Tim Matthews
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Clr,
                       Clr.Bridge,
                       Clr.Curry,
                       Clr.Inheritance,
                       Clr.Interface,
                       Clr.ListTuple,
                       Clr.Marshal,
                       Clr.Object,
                       Clr.Types
  other-modules:
  build-depends:       base >= 4.7 && < 5, tuple
  default-language:    Haskell2010

executable clr-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Bindings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , clr
  default-language:    Haskell2010

test-suite clr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/tim-m89/clr
