name:                clr-inline-demo
version:             0.1.0.0
synopsis:            Examples for clr-inline
description:         Examples for clr-inline
homepage:            https://gitlab.com/tim-m89/clr-haskell
license:             BSD3
license-file:        LICENSE
author:              Pepe Iborra
maintainer:          pepeiborra@gmail.com
copyright:           (c) 2017 Jose Iborra
category:            Development
cabal-version:       >=1.24
extra-source-files:  src/Window.xaml
build-type:          Custom

custom-setup
    setup-depends:   base, Cabal, clr-inline 


executable winforms
  main-is:             Winforms.hs
  build-depends:       base >=4.9 && < 5, clr-inline
  hs-source-dirs:      src
  default-language:    Haskell2010

executable wpf
  if os(windows)
     buildable:        True
  else
     buildable:        False
  main-is:             Wpf.hs
  build-depends:       base >=4.9 && < 5, clr-inline, here
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       WpfDeps

executable assemblyDeps
  main-is:             AssemblyDeps.hs
  build-depends:       base >=4.9 && < 5, clr-inline, directory >= 1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -main-is AssemblyDeps
  other-modules:       AssemblyDeps.Config
