name:                clr-inline-test-app
version:             0.1.0.0
synopsis:            Example/test for the inline frontend
-- description:         
homepage:            https://gitlab.com/tim-m89/clr-haskell
license:             BSD3
license-file:        LICENSE
author:              Pepe Iborra
maintainer:          pepeiborra@gmail.com
copyright:           (c) 2017 Jose Iborra
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable clr-inline-test-app
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, clr-inline, clr-host
  hs-source-dirs:      src
  default-language:    Haskell2010
