name:                clr-test-app
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/tim-m89/clr-test-app#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Matthews
maintainer:          tim.matthews7@gmail.com
copyright:           Copyright: (c) 2016-2017 Tim Matthews
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable clr-test-app
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , clr
                     , clr-host
                     , clr-bindings
                     , clr-marshal
                     , pipes
                     , pipes-text
                     , text
