name:                clr-bindings
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://gitlab.com/tim-m89/clr-haskell/tree/master/libs/clr-bindings
license:             BSD3
license-file:        LICENSE
author:              Tim Matthews
maintainer:          tim.matthews7@gmail.com
copyright:           2017 Tim Matthews
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Clr.Bindings
                     , Clr.Bindings.Box
                     , Clr.Bindings.Reflection
                     , Clr.Bindings.Host
                     , Clr.Bindings.ImportGen
                     , Clr.Bindings.IEnumerable
                     , Clr.Bindings.Marshal
  build-depends:       base >= 4.7 && < 5, clr, clr-host, text, template-haskell, pipes
  default-language:    Haskell2010

test-suite clr-bindings-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clr-bindings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/tim-m89/clr-bindings
