name:                clr-import-gen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://gitlab.com/tim-m89/clr-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Matthews
maintainer:          tim.matthews7@gmail.com
copyright:           Copyright: (c) 2017 Tim Matthews
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Clr.ImportGen.Definition
                     , Clr.ImportGen.Parser
                     , Clr.ImportGen.Processor
                     , Clr.ImportGen.QQ
                     , Clr.ImportGen.Reflection
  build-depends:       base >= 4.7 && < 5
                     , template-haskell
                     , text
                     , attoparsec
                     , clr
                     , clr-host
                     , clr-bindings
  default-language:    Haskell2010

test-suite clr-import-gen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , template-haskell
                     , text
                     , attoparsec
                     , clr-import-gen
                     , clr
                     , clr-host
                     , clr-bindings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/tim-m89/clr-haskell
