name:                clr-inline
version:             0.1.0.0
synopsis:            CLR interop via inline C# or F# code in Haskell modules
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Jose Iborra
maintainer:          pepeiborra@gmail.com
copyright:           2017 Jose Iborra
category:            Language, FFI, CLR, Net
build-type:          Simple
extra-source-files:  
  CHANGELOG.md 
  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Clr.Inline 
                       Clr.Inline.Config
  other-modules:       
                       Clr.CSharp.Inline
                       Clr.FSharp.Inline
                       Clr.Inline.State
                       Clr.Inline.Types
                       Clr.Inline.Utils
                       Clr.Inline.Utils.Parse
                       Clr.Inline.Utils.Embed
                       Clr.Inline.Quoter
                       Clr.FSharp.Gen
  build-depends:        base >=4.9 && <4.10,
                        bytestring,
                        clr-host,
                        clr-marshal,
                        containers,
                        directory,
                        extra,
                        filepath,
                        here,
                        lens,
                        process,
                        template-haskell,
                        temporary,
                        text,
                        transformers
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Werror

benchmark    benchmark
  type: exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      bench
  build-depends:       base, clr-inline, criterion, text
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base, clr-inline, hspec, text
  default-language:    Haskell2010
  other-modules:       InlineSpec